后端文档修正，问题表单建立，数据库迁移工具模块建立
